Delete strange line feed

--- a/FollowMe/RoboCup/Template/FollowMeDemo.xml
+++ b/FollowMe/RoboCup/Template/FollowMeDemo.xml
@@ -5,8 +5,7 @@
   <instanciate class="Man-nii.xml">  
     <set-attr-value name="name" value="operator"/>  
     <set-attr-value name="language" value="c++"/>
-    <set-attr-value name="implementation"
-                    value="./Operator.so"/>
+    <set-attr-value name="implementation" value="./Operator.so"/>
     <set-attr-value name="dynamics" value="false"/>  
     <set-attr-value name="x" value="-50.0"/>  
     <set-attr-value name="y" value="60.0"/>  
@@ -17,8 +16,7 @@
   <instanciate class="Man_02.xml">  
     <set-attr-value name="name" value="man_001"/>  
     <set-attr-value name="language" value="c++"/>
-    <set-attr-value name="implementation"
-                    value="./FollowMeHuman.so"/>
+    <set-attr-value name="implementation" value="./FollowMeHuman.so"/>
     <set-attr-value name="dynamics" value="false"/>  
     <set-attr-value name="x" value="-525.0"/>  
     <set-attr-value name="y" value="60.0"/>  
@@ -31,8 +29,7 @@
 	<instanciate class="seModerator.xml">  
     <set-attr-value name="name" value="checkpoint_001"/> 
     <set-attr-value name="language" value="c++"/>
-    <set-attr-value name="implementation"
-                    value="./CheckPoint.so"/> 
+    <set-attr-value name="implementation" value="./CheckPoint.so"/> 
     <set-attr-value name="dynamics" value="false"/>  
     <set-attr-value name="x" value="-525.0"/>  
     <set-attr-value name="y" value="60.0"/>  
@@ -42,8 +39,7 @@
 	<instanciate class="seModerator.xml">  
     <set-attr-value name="name" value="checkpoint_002"/> 
     <set-attr-value name="language" value="c++"/>
-    <set-attr-value name="implementation"
-                    value="./CheckPoint2.so"/> 
+    <set-attr-value name="implementation" value="./CheckPoint2.so"/> 
     <set-attr-value name="dynamics" value="false"/>  
     <set-attr-value name="x" value="-1100.0"/>  
     <set-attr-value name="y" value="60.0"/>  
@@ -53,8 +49,7 @@
 	<instanciate class="CheckPoint.xml">  
     <set-attr-value name="name" value="ITP_01"/> 
     <set-attr-value name="language" value="c++"/>
-    <set-attr-value name="implementation"
-                    value="./ITP1.so"/> 
+    <set-attr-value name="implementation" value="./ITP1.so"/> 
     <set-attr-value name="dynamics" value="false"/>  
     <set-attr-value name="x" value="-720.0"/>  
     <set-attr-value name="y" value="5.0"/>  
@@ -64,8 +59,7 @@
 	<instanciate class="CheckPoint.xml">  
     <set-attr-value name="name" value="ITP_02"/>
     <set-attr-value name="language" value="c++"/>
-    <set-attr-value name="implementation"
-                    value="./ITP2.so"/> 
+    <set-attr-value name="implementation" value="./ITP2.so"/> 
     <set-attr-value name="dynamics" value="false"/>  
     <set-attr-value name="x" value="-800.0"/>  
     <set-attr-value name="y" value="5.0"/>  
@@ -77,8 +71,7 @@
 	<instanciate class="CheckPoint.xml">  
     <set-attr-value name="name" value="FinishLine"/> 
     <set-attr-value name="language" value="c++"/>
-    <set-attr-value name="implementation"
-                    value="./FinishLine.so"/> 
+    <set-attr-value name="implementation" value="./FinishLine.so"/> 
     <set-attr-value name="dynamics" value="false"/>  
     <set-attr-value name="x" value="-800.0"/>  
     <set-attr-value name="y" value="5.0"/>  
@@ -88,8 +81,7 @@
 	<!--<instanciate class="CheckPoint.xml">  
     <set-attr-value name="name" value="finish_line"/> 
     <set-attr-value name="language" value="c++"/>
-    <set-attr-value name="implementation"
-                    value="./FinishLine.so"/> 
+    <set-attr-value name="implementation" value="./FinishLine.so"/> 
     <set-attr-value name="dynamics" value="false"/>  
     <set-attr-value name="x" value="-800.0"/>  
     <set-attr-value name="y" value="5.0"/>  
@@ -99,8 +91,7 @@
 	<instanciate class="seModerator.xml">  
     <set-attr-value name="name" value="score"/> 
     <set-attr-value name="language" value="c++"/>
-    <set-attr-value name="implementation"
-                    value="./score.so"/> 
+    <set-attr-value name="implementation" value="./score.so"/> 
     <set-attr-value name="dynamics" value="false"/>  
     <set-attr-value name="x" value="0.0"/>  
     <set-attr-value name="y" value="250.0"/>  
@@ -143,8 +134,7 @@
   <instanciate class="WheelRobot-nii-v1.xml" type="Robot">
     <set-attr-value name="name" value="robot_004"/>
     <set-attr-value name="language" value="c++"/>
-    <set-attr-value name="implementation"
-                    value="./FollowMeTestRobot.so"/>
+    <set-attr-value name="implementation" value="./FollowMeTestRobot.so"/>
     <set-attr-value name="dynamics" value="false"/>
     <set-attr-value name="x" value="-50.0"/>
     <set-attr-value name="y" value="30.0"/>
@@ -718,8 +708,7 @@
   <instanciate class="Wall_EV1.xml"> 
     <set-attr-value name="name" value="wall_008"/>
     <set-attr-value name="language" value="c++"/>  
-    <set-attr-value name="implementation"
-                    value="./Wall.so"/>
+    <set-attr-value name="implementation" value="./Wall.so"/>
     <set-attr-value name="x" value="-925.0"/>  
     <set-attr-value name="y" value="50.0"/>  
     <set-attr-value name="z" value="125.0"/>    
@@ -735,8 +724,7 @@
     <set-attr-value name="y" value="200.0"/>
     <set-attr-value name="z" value="190.0"/>
     <set-attr-value name="language" value="c++"/>
-    <set-attr-value name="implementation"
-                    value="./Moderator.so"/>
+    <set-attr-value name="implementation" value="./Moderator.so"/>
     <set-attr-value name="collision" value="false"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
@@ -754,8 +742,7 @@
     <set-attr-value name="qw" value="0"/>
     <!--cos(theta/2)-->
     <set-attr-value name="language" value="c++"/>
-    <set-attr-value name="implementation"
-                    value="./Camera.so"/>
+    <set-attr-value name="implementation" value="./Camera.so"/>
     <set-attr-value name="collision" value="false"/>
     <set-attr-value name="graspable" value="false"/>
     <camera id="1"
