--- a/EGPSR/RoboCup/Template/EGPSR2015_v2.xml
+++ b/EGPSR/RoboCup/Template/EGPSR2015_v2.xml
@@ -636,7 +636,7 @@
     -->
 
   <!-- ロボット正面の外側の壁 -->
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx1_0"/>
     <set-attr-value name="x" value="0.0"/>
     <set-attr-value name="y" value="120.0"/>
@@ -648,7 +648,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx1_1"/>
     <set-attr-value name="x" value="100.1"/>
     <set-attr-value name="y" value="120.0"/>
@@ -660,7 +660,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx1_2"/>
     <set-attr-value name="x" value="200.2"/>
     <set-attr-value name="y" value="120.0"/>
@@ -672,7 +672,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx1_3"/>
     <set-attr-value name="x" value="300.3"/>
     <set-attr-value name="y" value="120.0"/>
@@ -684,7 +684,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx1_4"/>
     <set-attr-value name="x" value="400.4"/>
     <set-attr-value name="y" value="120.0"/>
@@ -696,7 +696,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx1_5"/>
     <set-attr-value name="x" value="500.5"/>
     <set-attr-value name="y" value="120.0"/>
@@ -710,7 +710,7 @@
   </instanciate>
 
 
-<instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx1_-1"/>
     <set-attr-value name="x" value="-100.1"/>
     <set-attr-value name="y" value="120.0"/>
@@ -722,7 +722,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx1_-2"/>
     <set-attr-value name="x" value="-200.2"/>
     <set-attr-value name="y" value="120.0"/>
@@ -735,7 +735,7 @@
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
 
-<instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx1_-3"/>
     <set-attr-value name="x" value="-300.3"/>
     <set-attr-value name="y" value="120.0"/>
@@ -747,7 +747,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx1_-4"/>
     <set-attr-value name="x" value="-400.4"/>
     <set-attr-value name="y" value="120.0"/>
@@ -759,7 +759,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-    <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx1_-5"/>
     <set-attr-value name="x" value="-500.5"/>
     <set-attr-value name="y" value="120.0"/>
@@ -805,7 +805,7 @@
 -->
 
   <!-- ロボットの後ろ側の壁 -->
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx2_0"/>
     <set-attr-value name="x" value="0.0"/>
     <set-attr-value name="y" value="35.0"/>
@@ -817,7 +817,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx2_1"/>
     <set-attr-value name="x" value="100.1"/>
     <set-attr-value name="y" value="35.0"/>
@@ -829,7 +829,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx2_2"/>
     <set-attr-value name="x" value="200.2"/>
     <set-attr-value name="y" value="35.0"/>
@@ -841,7 +841,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx2_3"/>
     <set-attr-value name="x" value="300.3"/>
     <set-attr-value name="y" value="35.0"/>
@@ -853,7 +853,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx2_4"/>
     <set-attr-value name="x" value="400.4"/>
     <set-attr-value name="y" value="35.0"/>
@@ -865,7 +865,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx2_5"/>
     <set-attr-value name="x" value="500.5"/>
     <set-attr-value name="y" value="35.0"/>
@@ -877,7 +877,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx2_-1"/>
     <set-attr-value name="x" value="-100.1"/>
     <set-attr-value name="y" value="35.0"/>
@@ -889,7 +889,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx2-_2"/>
     <set-attr-value name="x" value="-200.2"/>
     <set-attr-value name="y" value="35.0"/>
@@ -901,7 +901,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx2_-3"/>
     <set-attr-value name="x" value="-300.3"/>
     <set-attr-value name="y" value="35.0"/>
@@ -913,7 +913,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx2_-4"/>
     <set-attr-value name="x" value="-400.4"/>
     <set-attr-value name="y" value="35.0"/>
@@ -925,7 +925,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_x.xml">
+  <instanciate class="wall2_xy.xml">
     <set-attr-value name="name" value="wallx2_-5"/>
     <set-attr-value name="x" value="-500.5"/>
     <set-attr-value name="y" value="35.0"/>
@@ -969,21 +969,27 @@
     </instanciate>
 -->
 
-<instanciate class="wall_x3.xml">
+  <instanciate class="wall2_xy.xml">
         <set-attr-value name="name" value="wallx3"/>
         <set-attr-value name="x" value="200.0"/>
         <set-attr-value name="y" value="35.0"/>
         <set-attr-value name="z" value="75.0"/>
+        <set-attr-value name="scalex" value="1.97"/>
+        <set-attr-value name="scaley" value="0.7"/>
+        <set-attr-value name="scalez" value="1.0"/>
         <set-attr-value name="dynamics" value="false"/>
         <set-attr-value name="collision" value="true"/>
         <set-attr-value name="graspable" value="false"/>
     </instanciate>
 
-  <instanciate class="wall_x3.xml">
+  <instanciate class="wall2_xy.xml">
         <set-attr-value name="name" value="wallx4"/>
         <set-attr-value name="x" value="-200.0"/>
         <set-attr-value name="y" value="35.0"/>
         <set-attr-value name="z" value="75.0"/>
+        <set-attr-value name="scalex" value="1.97"/>
+        <set-attr-value name="scaley" value="0.7"/>
+        <set-attr-value name="scalez" value="1.0"/>
         <set-attr-value name="dynamics" value="false"/>
         <set-attr-value name="collision" value="true"/>
         <set-attr-value name="graspable" value="false"/>
@@ -1007,11 +1013,14 @@
     </instanciate>
 -->
 
-<instanciate class="wall_x4.xml">
+  <instanciate class="wall2_xy.xml">
         <set-attr-value name="name" value="wallx5"/>
         <set-attr-value name="x" value="-197.0"/>
         <set-attr-value name="y" value="35.0"/>
         <set-attr-value name="z" value="-75.0"/>
+        <set-attr-value name="scalex" value="1.97"/>
+        <set-attr-value name="scaley" value="0.7"/>
+        <set-attr-value name="scalez" value="1.0"/>
         <set-attr-value name="dynamics" value="false"/>
         <set-attr-value name="collision" value="true"/>
         <set-attr-value name="graspable" value="false"/>
@@ -1049,7 +1058,7 @@
 -->
 
   <!--ロボット右側の壁-->
-  <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz1_0"/>
     <set-attr-value name="x" value="-500.0"/>
     <set-attr-value name="y" value="120.0"/>
@@ -1061,7 +1070,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz1_1"/>
     <set-attr-value name="x" value="-500.0"/>
     <set-attr-value name="y" value="120.0"/>
@@ -1073,7 +1082,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz1_2"/>
     <set-attr-value name="x" value="-500.0"/>
     <set-attr-value name="y" value="120.0"/>
@@ -1085,7 +1094,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz1_3"/>
     <set-attr-value name="x" value="-500.0"/>
     <set-attr-value name="y" value="120.0"/>
@@ -1097,7 +1106,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-    <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz1_4"/>
     <set-attr-value name="x" value="-500.0"/>
     <set-attr-value name="y" value="120.0"/>
@@ -1137,7 +1146,7 @@
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
   -->
-  <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz1_-2"/>
     <set-attr-value name="x" value="-500.0"/>
     <set-attr-value name="y" value="120.0"/>
@@ -1149,7 +1158,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz1_-3"/>
     <set-attr-value name="x" value="-500.0"/>
     <set-attr-value name="y" value="120.0"/>
@@ -1161,7 +1170,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz1_-4"/>
     <set-attr-value name="x" value="-500.0"/>
     <set-attr-value name="y" value="120.0"/>
@@ -1288,7 +1297,7 @@
     </instanciate>
     -->
 
-  <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz4_0"/>
     <set-attr-value name="x" value="500.0"/>
     <set-attr-value name="y" value="35.0"/>
@@ -1300,7 +1309,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz4_1"/>
     <set-attr-value name="x" value="500.0"/>
     <set-attr-value name="y" value="35.0"/>
@@ -1362,7 +1371,7 @@
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
   -->
-  <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz4_-1"/>
     <set-attr-value name="x" value="500.0"/>
     <set-attr-value name="y" value="35.0"/>
@@ -1374,7 +1383,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz4_-2"/>
     <set-attr-value name="x" value="500.0"/>
     <set-attr-value name="y" value="35.0"/>
@@ -1386,7 +1395,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz4_-3"/>
     <set-attr-value name="x" value="500.0"/>
     <set-attr-value name="y" value="35.0"/>
@@ -1398,7 +1407,7 @@
     <set-attr-value name="collision" value="true"/>
     <set-attr-value name="graspable" value="false"/>
   </instanciate>
-  <instanciate class="wall_z.xml">
+  <instanciate class="wall2_yz.xml">
     <set-attr-value name="name" value="wallz4_-4"/>
     <set-attr-value name="x" value="500.0"/>
     <set-attr-value name="y" value="35.0"/>
@@ -1429,11 +1438,14 @@
   
 
 
-  <instanciate class="wall_z4.xml">
+  <instanciate class="wall2_yz.xml">
         <set-attr-value name="name" value="wallz5"/>
         <set-attr-value name="x" value="-100.0"/>
         <set-attr-value name="y" value="35.0"/>
         <set-attr-value name="z" value="250.0"/>
+        <set-attr-value name="scalex" value="1.0"/>
+        <set-attr-value name="scaley" value="0.7"/>
+        <set-attr-value name="scalez" value="3.47"/>
         <set-attr-value name="dynamics" value="false"/>
         <set-attr-value name="collision" value="true"/>
         <set-attr-value name="graspable" value="false"/>
@@ -1469,21 +1481,27 @@
     </instanciate>
 
 -->
-<instanciate class="wall_z5.xml">
+  <instanciate class="wall2_yz.xml">
         <set-attr-value name="name" value="wallz6"/>
         <set-attr-value name="x" value="100.0"/>
         <set-attr-value name="y" value="35.0"/>
         <set-attr-value name="z" value="175.0"/>
+        <set-attr-value name="scalex" value="1.0"/>
+        <set-attr-value name="scaley" value="0.7"/>
+        <set-attr-value name="scalez" value="1.97"/>
         <set-attr-value name="dynamics" value="false"/>
         <set-attr-value name="collision" value="true"/>
         <set-attr-value name="graspable" value="false"/>
     </instanciate>
 
-    <instanciate class="wall_z5.xml">
+  <instanciate class="wall2_yz.xml">
         <set-attr-value name="name" value="wallz7"/>
         <set-attr-value name="x" value="-100.0"/>
         <set-attr-value name="y" value="35.0"/>
         <set-attr-value name="z" value="-175.0"/>
+        <set-attr-value name="scalex" value="1.0"/>
+        <set-attr-value name="scaley" value="0.7"/>
+        <set-attr-value name="scalez" value="1.97"/>
         <set-attr-value name="dynamics" value="false"/>
         <set-attr-value name="collision" value="true"/>
         <set-attr-value name="graspable" value="false"/>
@@ -1505,11 +1523,14 @@
         <set-attr-value name="graspable" value="false"/>
     </instanciate>
 -->
-    <instanciate class="floor_1.xml">
+    <instanciate class="floor1.xml">
         <set-attr-value name="name" value="floor"/>
         <set-attr-value name="x" value="0.0"/>
         <set-attr-value name="y" value="0.0"/>
         <set-attr-value name="z" value="0.0"/>
+        <set-attr-value name="scalex" value="10.0"/>
+        <set-attr-value name="scaley" value="1.0"/>
+        <set-attr-value name="scalez" value="8.5"/>
         <set-attr-value name="dynamics" value="false"/>
         <set-attr-value name="collision" value="false"/>
         <set-attr-value name="graspable" value="false"/>
